<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <ImageView
            android:id="@+id/imgFilm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VectorDrawableCompat"
            />
        <TextView
            android:id="@+id/tltFilm2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/film_name"
            style="@style/title_film"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/imgFilm2"
            app:layout_constraintTop_toTopOf="parent"
            android:ems="12"
            android:lines="2"
            />

        <TextView
            android:id="@+id/orgTltFilm2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/origin_film_name"
            style="@style/org_title_film_and_date"
            app:layout_constraintStart_toEndOf="@id/imgFilm2"
            app:layout_constraintTop_toBottomOf="@id/tltFilm2"
            app:layout_constraintEnd_toStartOf="@id/dtFilm2"

            />
        <TextView
            android:id="@+id/dtFilm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/date_release"
            style="@style/org_title_film_and_date"
            app:layout_constraintStart_toEndOf="@id/orgTltFilm2"
            app:layout_constraintTop_toBottomOf="@id/tltFilm2"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/rtFilm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/orgTltFilm2"
            app:layout_constraintStart_toEndOf="@id/imgFilm2"
            android:layout_marginBottom="7dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/rate_film"
            style="@style/rate"
            />
        <TextView
            android:id="@+id/votes2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/orgTltFilm2"
            app:layout_constraintStart_toEndOf="@id/rtFilm2"
            android:layout_marginBottom="7dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            style="@style/vote_count"
            android:text="@string/votes"
            />
        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgFilm2"
            android:layout_marginTop="10dp"
            android:gravity="fill"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:padding="8sp"
            android:text="@string/overview"
            style="@style/overview"
            android:lineSpacingMultiplier="1.25"
            />

        <ImageView
            android:id="@+id/baner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview"
            tools:ignore="VectorDrawableCompat"
            tools:srcCompat="@tools:sample/avatars"
            android:adjustViewBounds="true"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>